# DomesDayDuplicator-On-the-fly-

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-apple-silicon.yml  build-arm64.yml  build-linux-x86.yml  build-windows-x86.yml  build.yml  linux-arm64.yml  linux-x64.yml  macos-arm64.yml  macos-x64.yml  quality.yml  release.yml  test.yml  windows-x64.yml
Case/: README.md
DomesdayDuplicator/: AudioResampler.cpp  CMakeLists.txt  MacOSXBundleInfo.plist.in  UsbDeviceBase.cpp  UsbDeviceBase.h  captureoptionsdialog.cpp  cmake_install.cmake  configuration.cpp  configuration.h  configurationdialog.cpp  configurationdialog.h  configurationdialog.ui  macos_permissions.h  macos_permissions.mm  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.rc
DomesdayDuplicator/DomesdayDuplicator_autogen/: moc_predefs.h
DomesdayDuplicator/DomesdayDuplicator_autogen/EWIEGA46WW/: moc_aboutdialog.cpp.d  moc_advancednamingdialog.cpp.d  moc_amplitudemeasurement.cpp.d  moc_automaticcapturedialog.cpp.d  moc_configurationdialog.cpp.d  moc_mainwindow.cpp.d
GNURadio-Scripts/: README.txt  rtlsdr_to_flac.py  rtlsdr_to_flac_only.py  rtlsdr_to_u8_only.py
Linux-Application/: DOWNSAMPLING_README.md  build_with_system_ffmpeg.sh  cmake_install.cmake  install_manifest.txt
Linux-Application/DomesdayDuplicator/: AudioResampler.cpp  AudioResampler.h  CMakeLists.txt  UsbDeviceBase.cpp  UsbDeviceBase.h  cmake_install.cmake  configuration.cpp  configuration.h  configurationdialog.cpp  mainwindow.cpp  version_check.cpp
Linux-Application/DomesdayDuplicator/DomesdayDuplicator_autogen/: mocs_compilation.cpp
Linux-Application/DomesdayDuplicator/DomesdayDuplicator_autogen/EWIEGA46WW/: moc_configuration.cpp.d  moc_playercommunication.cpp.d  moc_playercontrol.cpp.d  moc_playerremotedialog.cpp.d  moc_qcustomplot.cpp.d
Linux-Application/dddconv/: cmake_install.cmake
Linux-Application/dddconv/dddconv_autogen/: moc_predefs.h
Linux-Application/dddconv/dddconv_autogen/EWIEGA46WW/: moc_dataconversion.cpp.d
Linux-Application/dddutil/: cmake_install.cmake
Linux-Application/dddutil/dddutil_autogen/: mocs_compilation.cpp
Linux-Application/dddutil/dddutil_autogen/EWIEGA46WW/: moc_about.cpp.d  moc_inputsample.cpp.d  moc_mainwindow.cpp.d
dddconv/dddconv_autogen/: mocs_compilation.cpp
dddutil/dddutil_autogen/EWIEGA46WW/: moc_analysetestdata.cpp.d  moc_fileconverter.cpp.d  moc_progressdialog.cpp.d
